<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#9bd0e2"
    tools:context=".TaxaMetabolicaBasal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="243dp"
        android:layout_height="387dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/text_peso"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/imputtext"
            android:elevation="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/peso_kg"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/text_idade"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/imputtext"
            android:elevation="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/idade"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/text_altura"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/imputtext"
            android:elevation="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/altura_em_centimetros"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/nivel_de_atividades"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/imputtext"
            android:elevation="10dp"
            android:gravity="center"
            android:text="@string/nivel_de_atividades"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/resultado_f"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/imputtext"
            android:elevation="10dp"
            android:gravity="center"
            android:text="@string/resultado"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/imputtext"
                android:elevation="2dp"
                android:text="@string/homem"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/feminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/imputtext"
                android:elevation="2dp"
                android:text="@string/mulher"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/avisocheckbox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/material_dynamic_neutral10"
            android:visibility="visible"
            tools:ignore="VisualLintBounds"
            tools:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="356dp"
        android:layout_height="34dp"
        android:background="#9bd0e2"
        android:gravity="center"
        android:text="@string/taxa_metabolica_basal"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="317dp"
        android:layout_height="28dp"
        android:background="#9bd0e2"
        android:gravity="center"
        android:text="@string/harris_benedict"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calcular"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/background_button1"
        android:elevation="10dp"
        android:text="@string/calcular"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/info"
        android:layout_width="29dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:contentDescription="TODO"
        android:elevation="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517"
        app:srcCompat="@drawable/triangulo"
        tools:ignore="ContentDescription,HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>